force-app/main/default/objects/Authentication__c/fields/Passphrase__c.field-meta.xml
<CustomField>
    <fullName>Passphrase__c</fullName>
    <label>Passphrase</label>
    <length>94</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>