force-app/main/default/objects/Authentication__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Authentication</relationshipLabel>
    <relationshipName>Authentication</relationshipName>
    <type>Lookup</type>
</CustomField>