force-app/main/default/objects/Authentication__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Authentication</relationshipLabel>
    <relationshipName>Authentication</relationshipName>
    <type>Lookup</type>
</CustomField>