force-app/main/default/objects/Authentication__c/validationRules/Lookup_IsNull.validationRule-meta.xml
<ValidationRule>
    <fullName>Lookup_IsNull</fullName>
    <active>true</active>
    <description>If a record has a lookup then it can&apos;t be re-parented.</description>
    <errorConditionFormula>OR(ISCHANGED(Student__c),ISCHANGED(Teacher__c ), ISCHANGED( Staff__c))</errorConditionFormula>
    <errorMessage>Can&apos;t be reparented to other lookup record.</errorMessage>
</ValidationRule>